--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  background-color: #f3f2faff;
+  background-color: #fbfaffff;
 }
 * {
   box-sizing: border-box;
